--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -29,7 +29,8 @@
 			],
 			"settings": {
 				"go.useLanguageServer": true,
-				"go.toolsManagement.autoUpdate": true
+				"go.toolsManagement.autoUpdate": true,
+				"go.lintTool": "golangci-lint"
 			}
 		}
 	}
