--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,5 @@ terraform.rc
 
 ## Result
 terraform-provider-sitecoreai
+examples/resources/**/provider*.tf
+examples/data-sources/**/provider*.tf
